combinations and graphs